--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   web:
+    cpu_shares: 1024
     # latest when writing
     image: nginx:1.17.6-alpine
     networks:
@@ -20,6 +21,7 @@ services:
         target: /etc/nginx/conf.d/site.conf
   
   phpfpm:
+    cpu_shares: 1024
     image: 'php:7.4.1-fpm'
     networks:
       - network-php
