--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.7'
 
 services:
   web:
-    cpu_shares: 1024
+    cap_drop:
+      - ALL
     # Not available in compose files v3 for docker-compose
     # cpu_shares: 1024
     # latest when writing
@@ -11,6 +12,9 @@ services:
       - network-php
     ports:
       - '80:80'
+    # Allow access to port 80 for test purpose # Prefer ports > 1024 otherwise
+    sysctls:
+      net.ipv4.ip_unprivileged_port_start: 0
     volumes:
       - type: bind
         source: ./src
