--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
         target: /etc/nginx/conf.d/site.conf
   
   phpfpm:
-    cpu_shares: 1024
+    # TODO: after custom user is set
     # Not available in compose files v3 for docker-compose
     # cpu_shares: 1024
     image: 'php:7.4.1-fpm'
