--- a/config/nginx1.17.6-alpine/etc/nginx/conf.d/site.conf
+++ b/config/nginx1.17.6-alpine/etc/nginx/conf.d/site.conf
@@ -1,7 +1,28 @@
 # http://geekyplatypus.com/dockerise-your-php-application-with-nginx-and-php7-fpm/
 # Automatically loaded thanks to default nginx conf in /etc/nginx/nginx.conf > 'include /etc/nginx/conf.d/*.conf;'
 
+# Adapted to run with a custom docker user > /tmp
+
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log warn;
+# pid        /var/run/nginx.pid;
+# Custom user config
+pid        /tmp/nginx.pid;
+
+events {
+    worker_connections  1024;
+}
+
 server {
+    # Custom user config
+    client_body_temp_path /tmp/client_temp;
+    proxy_temp_path       /tmp/proxy_temp_path;
+    fastcgi_temp_path     /tmp/fastcgi_temp;
+    uwsgi_temp_path       /tmp/uwsgi_temp;
+    scgi_temp_path        /tmp/scgi_temp;
+    
     # index           index.html;
     index index.php index.html;
     
