--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
     # Not available in compose files v3 for docker-compose
     # cpu_shares: 1024
     # latest when writing
+    healthcheck:
+      test: 'stat /etc/nginx/nginx.conf || exit 1'
+      interval: 10s
+      timeout: 10s
+      retries: 3
+      start_period: 0s
     image: nginx:1.17.6-alpine
     networks:
       - network-php
@@ -21,6 +27,10 @@ services:
       - type: bind
         source: ./src
         target: /home/www
+      # Override default nginx.conf to allow custom docker user
+      - type: bind
+        source: ./config/nginx1.17.6-alpine/etc/nginx/nginx.conf
+        target: /etc/nginx/nginx.conf
       - type: bind
         source: ./config/nginx1.17.6-alpine/etc/nginx/conf.d/default.conf
         target: /etc/nginx/conf.d/default.conf
@@ -30,8 +40,29 @@ services:
   
   phpfpm:
     # TODO: after custom user is set
+    # cap_drop:
+    #   - SETPCAP
+    #   - MKNOD
+    #   - AUDIT_WRITE
+    #   - CHOWN
+    #   - NET_RAW
+    #   - DAC_OVERRIDE
+    #   - FOWNER
+    #   - FSETID
+    #   - KILL
+    #   - SETGID
+    #   - SETUID
+    #   - NET_BIND_SERVICE
+    #   - SYS_CHROOT
+    #   - SETFCAP
     # Not available in compose files v3 for docker-compose
     # cpu_shares: 1024
+    healthcheck:
+      test: 'stat /etc/passwd || exit 1'
+      interval: 10s
+      timeout: 10s
+      retries: 3
+      start_period: 0s
     image: 'php:7.4.1-fpm'
     networks:
       - network-php
