--- a/config/nginx1.17.6-alpine/etc/nginx/conf.d/site.conf
+++ b/config/nginx1.17.6-alpine/etc/nginx/conf.d/site.conf
@@ -2,6 +2,8 @@
 # Automatically loaded thanks to default nginx conf in /etc/nginx/nginx.conf > 'include /etc/nginx/conf.d/*.conf;'
 
 server {
+    listen       80;
+    
     # index           index.html;
     index index.php index.html;
     
