--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,11 @@ services:
     image: 'php:7.4.1-fpm'
     networks:
       - network-php
+    # Allow access to port 80 for test purpose # Prefer ports > 1024 otherwise
+    sysctls:
+      net.ipv4.ip_unprivileged_port_start: 0
+    # Assign the_docker_peon unprivileged user
+    user: 1003:1003
     volumes:
       - type: bind
         source: ./src
