--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
 version: '3.7'
 
+# Note: CPU, memory, etc. are not available in compose files v3 for docker-compose, only for services
+#   cf. https://docs.docker.com/compose/compose-file/#resources
+# Same for --pids-limit 200 nowhere to be seen on v3, available in v2
+# Same for --restart=on-failure:5
+
 services:
   web:
     cap_drop:
       - ALL
-    # Not available in compose files v3 for docker-compose
     # cpu_shares: 1024
     # latest when writing
     healthcheck:
@@ -19,10 +23,18 @@ services:
       fr.masamune.maintainer: 'masamune.code@gmail.com'
       fr.masamune.project: 'curated composed nginx'
       fr.masamune.type: 'test'
+    # --memory-reservation="128m"
+    # --memory="256m"
+    # --memory-swap -1
     networks:
       - network-php
+    # --pids-limit 200
     ports:
       - '80:80'
+    security_opt:
+      - no-new-privileges:true
+      - apparmor=docker-default
+      - seccomp=/etc/docker/seccomp-profiles/default-docker-profile.json
     # Allow access to port 80 for test purpose # Prefer ports > 1024 otherwise
     sysctls:
       net.ipv4.ip_unprivileged_port_start: 0
@@ -64,7 +76,6 @@ services:
     #   - NET_BIND_SERVICE
     #   - SYS_CHROOT
     #   - SETFCAP
-    # Not available in compose files v3 for docker-compose
     # cpu_shares: 1024
     healthcheck:
       test: 'stat /etc/passwd || exit 1'
@@ -78,8 +89,16 @@ services:
       fr.masamune.maintainer: 'masamune.code@gmail.com'
       fr.masamune.project: 'curated composed php fpm'
       fr.masamune.type: 'test'
+    # --memory-reservation="128m"
+    # --memory="256m"
+    # --memory-swap -1
     networks:
       - network-php
+    # --pids-limit 200
+    security_opt:
+      - no-new-privileges:true
+      - apparmor=docker-default
+      - seccomp=/etc/docker/seccomp-profiles/default-docker-profile.json
     # Allow access to port 80 for test purpose # Prefer ports > 1024 otherwise
     sysctls:
       net.ipv4.ip_unprivileged_port_start: 0
