🐳ADD: stack > deploy > replicas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
         fr.masamune.project: 'curated service nginx'
         fr.masamune.type: 'test'
       mode: replicated
+      replicas: 3
     healthcheck:
       test: 'stat /etc/nginx/nginx.conf || exit 1'
       interval: 10s
@@ -97,6 +98,7 @@ services:
         fr.masamune.project: 'curated service php fpm'
         fr.masamune.type: 'test'
       mode: replicated
+      replicas: 3
     healthcheck:
       test: 'stat /etc/passwd || exit 1'
       interval: 10s
