--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,7 @@ services:
         source: ./config/nginx1.17.6-alpine/etc/nginx/conf.d/site.conf
         target: /etc/nginx/conf.d/site.conf
         read_only: true
+    working_dir: /usr/share/nginx/html
   
   phpfpm:
     # TODO: after custom user is set
